# config/routes.rb
@@ -1,5 +1,6 @@
 Rails.application.routes.draw do
   mount Rswag::Ui::Engine => '/api-docs'
   mount Rswag::Api::Engine => '/api-docs'
-  # For details on the DSL available within this file, see http://guides.rubyonrails.org/routing.html
+  post 'message', to: 'messages#create'
+  post 'message/:message_id/like', to: 'messages#like'
 end
